# rustnzb

./: .dockerignore  .gitignore  .woodpecker.yml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SabImporter.md  TODO  TODO.md  UPLIFT_PLAN.md  WORKPLAN.md  build.rs  config.example.toml  docker-compose.example.yml  docker-compose.yml  mockup.html  par2replace.md  promtail.yml
.claude/skills/bench/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/logs/: SKILL.md
.claude/skills/loki/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/test/: SKILL.md
.forgejo/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  desktop-build.yml  docker-deploy.yml  release.yml
benchnzb/: .gitignore  Cargo.toml  Dockerfile  METHODOLOGY.md  OVERVIEW.md  docker-compose.stress.yml  docker-compose.yml  issues.md  run-stress.sh  run.sh
benchnzb/configs/: rustnzb-stress.toml  rustnzb.toml  sabnzbd-stress.ini  sabnzbd.ini
benchnzb/results/: benchmark_20260320_210033.csv  benchmark_20260320_210033.json  benchmark_20260320_210435.csv  benchmark_20260320_210435.json  benchmark_20260320_215355.csv  benchmark_20260320_215355.json  benchmark_20260320_224115.csv  benchmark_20260320_224115.json  benchmark_20260320_231218.csv  benchmark_20260320_231218.json  benchmark_20260321_012407.csv  benchmark_20260321_012407.json  benchmark_20260321_020819.csv  benchmark_20260321_020819.json  benchmark_20260321_044858.csv  benchmark_20260321_044858.json  benchmark_20260321_050534.csv  benchmark_20260321_050534.json  benchmark_20260321_053448.csv  benchmark_20260321_053448.json  benchmark_20260321_061858.csv  benchmark_20260321_061858.json  benchmark_20260321_071440.csv  benchmark_20260321_071440.json  benchmark_20260321_083205.csv  benchmark_20260321_083205.json  summary_20260320_210033.txt  summary_20260320_210435.txt  summary_20260320_215355.txt  summary_20260320_224115.txt  summary_20260320_231218.txt  summary_20260321_012407.txt  summary_20260321_020819.txt  summary_20260321_044858.txt  summary_20260321_050534.txt  summary_20260321_053448.txt  summary_20260321_061858.txt  summary_20260321_071440.txt  summary_20260321_083205.txt
benchnzb/src/: charts.rs  config.rs  datagen.rs  docker.rs  main.rs  metrics.rs  mock_nntp.rs  nzb.rs  report.rs  runner.rs  stress.rs  stress_charts.rs  stress_report.rs  synth_nntp.rs  yenc.rs
benchnzb/src/clients/: mod.rs  rustnzb.rs  sabnzbd.rs
crates/nzb-core/: Cargo.toml
crates/nzb-core/src/: config.rs  db.rs  error.rs  groups_db.rs  lib.rs  models.rs  nzb_parser.rs  sabnzbd_import.rs
crates/nzb-decode/: Cargo.toml
crates/nzb-decode/src/: assembler.rs  cache.rs  lib.rs  yenc.rs
crates/nzb-nntp/: Cargo.toml
crates/nzb-nntp/src/: config.rs  connection.rs  downloader.rs  error.rs  lib.rs  pipeline.rs  pool.rs  server.rs  testutil.rs
crates/nzb-postproc/: Cargo.toml
crates/nzb-postproc/src/: detect.rs  lib.rs  par2.rs  pipeline.rs  unpack.rs
crates/nzb-web/: Cargo.toml  build.rs
crates/nzb-web/src/: auth.rs  bandwidth.rs  dir_watcher.rs  download_engine.rs  error.rs  group_handlers.rs  handlers.rs  lib.rs  log_buffer.rs  queue_manager.rs  rss_monitor.rs  sabnzbd_compat.rs  server.rs  startup.rs  state.rs  util.rs
crates/nzb-web/static/: index.html
crates/par2/: Cargo.toml
crates/par2-sys/: build.rs
crates/par2-sys/src/: lib.rs
crates/par2/src/: verify.rs
desktop/: package-lock.json  package.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
e2e/: USER_JOURNEYS.md  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: fresh-config.toml  sabnzbd.ini  sample.nzb  seed.sql  test-config.toml
e2e/helpers/: api.ts  auth.ts  backend.ts
e2e/tests/: auth.spec.ts  categories.spec.ts  first-boot.spec.ts  groups.spec.ts  history.spec.ts  logs.spec.ts  navigation.spec.ts  queue.spec.ts  rss.spec.ts  servers.spec.ts  settings.spec.ts  smoke.spec.ts
frontend/src/: index.html  styles.scss
frontend/src/app/: app.routes.ts  app.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/models/: queue.model.ts
frontend/src/app/core/services/: add-nzb.service.ts  api.service.ts  auth.service.ts
frontend/src/app/features/auth/: login.component.ts
frontend/src/app/features/groups/: group-browser-dialog.component.ts  groups-view.component.ts
frontend/src/app/features/history/: history-view.component.ts
frontend/src/app/features/logs/: logs-view.component.ts
frontend/src/app/features/media/: media-view.component.ts
frontend/src/app/features/queue/: queue-view.component.ts
installer/: windows.nsi
patches/rust-par2/: Cargo.toml
patches/rust-par2/src/: gf.rs  gf_simd.rs  lib.rs  matrix.rs  packets.rs  recovery.rs  repair.rs  types.rs  verify.rs
root/etc/s6-overlay/s6-rc.d/init-rustnzb-config/: up  (+1 more)
src/: group_handlers.rs  handlers.rs  lib.rs  main.rs  server.rs
src/dav/: mod.rs
systemd/: rustnzb.service
tests/: e2e_download_test.rs  e2e_full_pipeline.rs  e2e_postproc_detection.rs  nntp_connection_test.rs  parse_real_nzbs.rs  sabnzbd_import_test.rs
tests/sonarr-e2e/: .env.example  docker-compose.yml  run.sh
website/: .woodpecker.yml  CNAME  Caddyfile  Dockerfile  docker-compose.prod.yml  docker-compose.yml  index.html
website/.github/workflows/: dependabot-linear.yml  deploy.yml
website/css/: style.css
website/demo/: chunk-25IE2YME.js  chunk-2SYKFDVI.js  chunk-476CXDAV.js  chunk-4UT2SCCF.js  chunk-7CL6TSJH.js  chunk-BFCX2YO7.js  chunk-MB6KQKTH.js  chunk-MDZLVXMH.js  chunk-MVNES6KP.js  chunk-MYC65QMG.js  chunk-NFOK64NL.js  chunk-PDECXBG5.js  chunk-QKUNI7OJ.js  chunk-T7JCKM43.js  chunk-TSKARMUO.js  chunk-V6LUEJSE.js  chunk-VKTFULI4.js  chunk-W3MDRR7P.js  index.html  main-HEROB5LL.js  mock-api.js  styles-VD7OTYO3.css
website/deploy/: deploy-rustnzb.sh  docker-compose-caddy-additions.yml  setup-vps.sh  vps-caddyfile-block.txt  webhook-hook.json
website/js/: main.js
(+4 files in other folders)
