[workspace]
resolver = "3"
members = []
exclude = ["benchnzb", "desktop"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unused = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
# HTTP
http = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
# Data
rusqlite = { version = "0.32", features = ["bundled"] }
bytes = "1"
# Decode
crc32fast = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
# OpenTelemetry
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "metrics", "logs"] }
tracing-opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.28"
# Error handling
thiserror = "2"
anyhow = "1"
# Util
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
arc-swap = "1"
rand = "0.9"
hex = "0.4"
base64 = "0.22"
governor = "0.10"
webpki-roots = "0.26"
rustls-pki-types = "1"
# XML
quick-xml = "0.37"
regex = "1"
walkdir = "2"
flate2 = "1"
tokio-socks = "0.5"
notify = "7"
feed-rs = "2"
unicode-normalization = "0.1"

# Shared NZB crates ([patch] sections redirect to local for dev)
nzb-web = { version = "0.1.1", registry = "forgejo", features = ["groups-db"] }
nzb-nntp = { version = "0.2.1", registry = "forgejo" }
nzb-core = { version = "0.2.2", registry = "forgejo", features = ["groups-db"] }
nzb-decode = { version = "0.1.1", registry = "forgejo" }
nzb-postproc = { version = "0.2.1", registry = "forgejo" }
rust-par2 = { version = "0.1.2", registry = "forgejo" }
yenc-simd = { version = "0.1", registry = "forgejo" }

[package]
name = "rustnzb"
version.workspace = true
edition.workspace = true

[dependencies]
nzb-web = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
# Dependencies for app-specific handlers/server
axum = { workspace = true, features = ["multipart"] }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
regex = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rust-embed = "8"
mime_guess = "2"
libc = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["multipart", "json"] }
serde_json = { workspace = true }
axum = { workspace = true }
tempfile = "3"
arc-swap.workspace = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
