[package]
name = "benchnzb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bollard = { version = "0.17", default-features = false }
anyhow = "1"
crc32fast = "1"
memmap2 = "0.9"
futures-util = "0.3"
tokio-util = "0.7"

[profile.release]
opt-level = 3
lto = "thin"
