[package]
name = "nzb-web"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
nzb-core = { workspace = true }
nzb-nntp = { workspace = true }
nzb-decode = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
governor = { workspace = true }
arc-swap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
nzb-postproc = { workspace = true }
notify = { workspace = true }
feed-rs = { workspace = true }
regex = { workspace = true }
rust-embed = "8"
mime_guess = "2"
libc = "0.2"
