[package]
name = "par2"
version.workspace = true
edition.workspace = true

[dependencies]
crc32fast = { workspace = true }
md-5 = { version = "0.10", features = ["asm"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
par2-sys = { workspace = true }
rand = { workspace = true }

[[example]]
name = "par2_bench"
required-features = []
