# Local patch of rust-par2 0.1.0
# Only change: md-5 "asm" feature is target-conditional (not on MSVC)
# to fix Windows builds where md5-asm can't compile GNU assembly.

[package]
name = "rust-par2"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "rust_par2"
path = "src/lib.rs"

[dependencies]
md-5 = "0.10"
crc32fast = "1"
thiserror = "2"
tracing = "0.1"
rayon = "1"

# Use asm-accelerated MD5 on platforms that support GAS assembly (not MSVC)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
md-5 = { version = "0.10", features = ["asm"] }
